# nonebot-plugin-user

./: .env.prod  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codecov.yml  release-draft.yml  release.yml
migrations/: env.py
nonebot_plugin_user/: __init__.py  annotated.py  config.py  consts.py  depends.py  extractor.py  matcher.py  matchers.py  models.py  params.py  permission.py  utils.py
nonebot_plugin_user/adapters/: __init__.py  qq.py
nonebot_plugin_user/migrations/: 0f0ca7421689_migrate_old_plugin_data.py  5cb13347bece_init_db.py  8aa030575da8_init_db.py  9492159f98f7_remove_foreignkey.py  ac57f7074e58_init_db.py  d6e05e49f79f_refactor_uninfo.py  fc352174a592_add_email.py
tests/: conftest.py  fake.py  test_bind_group.py  test_bind_private.py  test_concurrency.py  test_inspect.py  test_remove_bind.py  test_user.py  test_utils.py
tests/plugins/: admin.py
tests/plugins/orm/: __init__.py
