[project]
name = "nonebot-plugin-user"
version = "0.5.3"
description = "适用于 Nonebot2 的用户插件"
authors = [{ name = "uy_sun", email = "hmy0119@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.10"
dependencies = [
  "nonebot2>=2.5.0",
  "nonebot-plugin-orm>=0.8.3",
  "nonebot-plugin-alconna>=0.62.0",
  "expiringdictx>=1.1.0",
  "nonebot-plugin-uninfo>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/he0119/nonebot-plugin-user"
Repository = "https://github.com/he0119/nonebot-plugin-user.git"
Issues = "https://github.com/he0119/nonebot-plugin-user/issues"
Changelog = "https://github.com/he0119/nonebot-plugin-user/blob/main/CHANGELOG.md"

[project.optional-dependencies]
inspect = ["nonebot-plugin-inspect>=0.2.0"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nonebot_plugin_user"
module-root = ""

[dependency-groups]
dev = [
  "nonebug>=0.4.4",
  "pytest-cov>=7.1.0",
  "pytest-xdist>=3.8.0",
  "pytest-mock>=3.15.1",
  "pytest-asyncio>=1.3.0",
  "freezegun>=1.5.5",
  "nonebot2[fastapi,httpx,websockets]>=2.5.0",
  "nonebot-plugin-orm[default]>=0.8.3",
  "nonebot-adapter-onebot>=2.4.6",
  "nonebot-adapter-qq>=1.7.1",
  "nonebot-adapter-satori>=1.3.0",
  "bump-my-version>=1.3.0",
  "poethepoet>=0.46.0",
  "aiomysql>=0.3.2",
  "asyncpg>=0.31.0",
]

[tool.uv.pip]
universal = true

[tool.poe.tasks]
test = "pytest --cov=nonebot_plugin_user --cov-report xml --junitxml=./junit.xml -n auto"
"test:single" = "pytest --cov=nonebot_plugin_user --cov-report xml --junitxml=./junit.xml"
bump = "bump-my-version bump"
show-bump = "bump-my-version show-bump"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
defineConstant = { PYDANTIC_V2 = true }

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
  "W",   # pycodestyle warnings
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
]
ignore = [
  "E402", # module-import-not-at-top-of-file
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-user = ["nonebot_plugin_user"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
  { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
]
nonebot-adapter-qq = [{ name = "QQ", module_name = "nonebot.adapters.qq" }]
nonebot-adapter-satori = [
  { name = "Satori", module_name = "nonebot.adapters.satori" },
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]
omit = ["*/migrations/*"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.bumpversion]
current_version = "0.5.3"
commit = true
message = "chore(release): {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
regex = true
search = "\\[Unreleased\\]: (https://.+?)v{current_version}\\.\\.\\.HEAD"
replace = "[Unreleased]: \\1v{new_version}...HEAD\n[{new_version}]: \\1v{current_version}...v{new_version}"
